[project]
name = "comfyui-light-tool"
description = "An awesome light tool nodes for ComfyUI."
version = "1.4.5"
license = { file = "LICENSE" }
dependencies = ["numpy", "pillow", "torch", "opencv-python", "httpx", "opendatalab==0.0.9", "oss2", "pycryptodome"]

[project.urls]
Repository = "https://github.com/ihmily/ComfyUI-Light-Tool"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hmily"
DisplayName = "Comfyui-Light-Tool"
Icon = ""